.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Grading__c/Shiftmatch_Grading__c.object-meta.xml
<CustomObject>
    <label>Shiftmatch Grading</label>
    <nameField>
        <label>Shiftmatch PKID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shiftmatch Gradings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>