.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Grading__c/fields/Award_Classification__c.field-meta.xml
<CustomField>
    <fullName>Award_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Award Classification</label>
    <referenceTo>tc9_et__Award_Classifications_and_Levels__c</referenceTo>
    <relationshipLabel>Shiftmatch Gradings</relationshipLabel>
    <relationshipName>Shiftmatch_Gradings</relationshipName>
    <type>Lookup</type>
</CustomField>