.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Grading__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Type</label>
    <referenceTo>sirenum__Job_Type__c</referenceTo>
    <relationshipLabel>Shiftmatch Gradings</relationshipLabel>
    <relationshipName>Shiftmatch_Gradings</relationshipName>
    <type>Lookup</type>
</CustomField>