.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Grading__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>