.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Grading__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Award_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>